<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.justen.shapedodge.HighScoreActivity">

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/movingshapes"
        android:scaleType="center" />

    <TextView
        android:id="@+id/highscoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="40dp"
        android:layout_marginTop="31dp"/>

        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:textAppearance="@android:style/TextAppearance.Material.Large.Inverse"
        android:textSize="40dp" />
    <TableLayout

        android:id="@+id/tableLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscoreText"
        android:layout_centerHorizontal="true"
        android:stretchColumns="0,1,2">

        <TableRow>

            <TextView
                android:id="@+id/rankText"
                android:layout_column="0"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="Rank"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/usernameText"
                android:layout_column="1"
                android:layout_weight="1"
                android:text="Username"
                android:textColor="@android:color/white"></TextView>

            <TextView
                android:id="@+id/scoreText"
                android:layout_column="2"
                android:layout_weight="1"
                android:text="Score"
                android:textColor="@android:color/white"></TextView>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/mainMenuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:background="@drawable/colorbutton"
        android:text="Main Menu"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/highscoreText"
        android:layout_toEndOf="@+id/highscoreText"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp" />

    <Button
        android:id="@+id/clearBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/colorbutton"
        android:text="Clear"
        android:textColor="@android:color/white"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="43dp"
        android:layout_marginEnd="43dp"
        android:layout_alignBottom="@+id/mainMenuBtn" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/highscores"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
