...
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:background="@drawable/movingshapes"
        android:scaleType="center" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/colorbutton"
...
        android:text="Settings"

        android:textColor="@android:color/white" />


    <Button
        android:id="@+id/highscoreButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settingsButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="30dp"
...
