...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.example.justen.shapedodge.GameView
            android:id="@+id/gameView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="false"
            android:layout_weight="4" />
...
            android:layout_alignParentTop="false"
            android:layout_below="@+id/gameView"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/pauseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:srcCompat="@android:drawable/ic_media_pause" /><![CDATA[
...
